<resources>
    <string name="app_name">AppGrupal</string>
    <string name="MenuP">Menu Principal</string>
    <string name="Examen">Realizar Prueba</string>
    <string name="Opcion1">Opcion 1</string>
    <string name="Opcion2">Opcion2</string>
    <string name="Opcion3">Opcion 3</string>
    <string name="V1">Valor 1</string>
    <string name="V2">Valor 2</string>
    <string name="V3">Valor 3</string>
    <string name="BtnResultado">Resultado</string>
    <string name="txtR">...</string>
    <string name="Barra">Barra de estado</string>
    <string name="Numero1">Numero 1</string>
    <string name="Numero2">Numero 2</string>
    <string name="Suma">Suma</string>
    <string name="Resta">Resta</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="nav_header_title">Menu Principal</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
